Closed Bug 65126 Opened 25 years ago Closed 25 years ago

clicking on the browser does not bring it to the front...

Categories

(Core :: XUL, defect)

x86
BeOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: michelangelo, Assigned: ykoehler)

Details

Attachments

(2 files)

if the mozilla window is beind another one, cliking on the area where the web pages should show up does not bring it to the front
When another app has the focus (yellow tab) you can still select text and push buttons in the Mozilla windows, it won't come to the front. When clicking on the window tab/border or menu-item it will get focus and come to the front. This isn't standard behaviour of BeOS apps, you should first click on a window so that it has the focus before you can select text, push buttons, etc.
beos
Assignee: asa → koehler
Component: Browser-General → XP Toolkit/Widgets
you are correct about actually clicking on buttons and things, but clicking on any application, in any part of the window, should at least bring it to the front of the other windows, even though the buttons do not recieve the messages...
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached patch patchSplinter Review
the modeline says indentations are 2 spaces. please follow it. http://www-classic.be.com/documentation/be_book/The%20Interface%20Kit/Window.ht ml#WindowActivated() should we be handling WindowActivated() ?
Keywords: approval, patch, review
Timeless, thanks you for comments. About coding styles, you are right. But I'm very confused, because many styles are intermingled in this code. So I followed the style around the point. Additionally about this file, there are some patches which are not checked in. So I thought the minimum amendment will be welcomed. Next, the function WindowActivated() is a hook function for detection of activations, and not to activate the Window. This function will never called unless we call Activate() except for the case users click window title. Normally, user's first click in non-active state is treated by the framework of BeOS, and cause the activation of the window. But in this code, we use B_WILL_ACCEPT_FIRST_CLICK flag for the construction of windows. So first click is not treated by the framework. And we shuold activate window as the need arises at MouseDown().
I've forgotten to write another solution. We can create windows without B_WILL_ACCEPT_FIRST_CLICK. But this way cause the problem when we create windows for menus. (We need two clicks to select an item...) But we can avoid this problem by using B_AVOID_FOCUS flag for menu windows. I can make another pach using this method. I think this new version is more natural solution.
Attached patch another solutionSplinter Review
Attachment 22774 [details] [diff] is a patch of another solution. We don't need previous 22625 anymore. This patch contain an amendment against another bug. B_NOT_CLOSABLE flag is that. If we don't use it, menu object will disapper on user's Alt-W.
Attach 22774 has been checked in. Marking fixed.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: