Fix for clicking on browser window not bring it to front. Thanks to Takashi Toyoshima <toyoshim@be-in.org> for the patch. Bug #65126 r=cls